tests/samples/invalid/assignment_type_mismatch.pn
fn main() -> i32
{
	var x: i32 = 0;
	x = true;
	var data = [true, false];
	data[1] = 23;
	var u: &i32 = &x;
	u = true;
	var b = false;
	&u = &b;
	b = 1180591620717411303424;
	return: x
}
